# dev-airflow-ec2

./: README.md  pyproject.toml
dags/: minha_dag.py
