[project]
name = "dev-airflow-ec2"
version = "0.1.0"
description = ""
authors = [
    {name = "diipdata",email = "diegop.freitas@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
